--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.7",
+    "@mapbox/mapbox-gl-sync-move": "^0.3.1",
     "@mdi/font": "7.4.47",
     "maplibre-gl": "^5.7.3",
+    "mitt": "^3.0.1",
     "pinia": "^3.0.3",
     "pmtiles": "^4.3.0",
     "vue": "^3.5.21",
